--- a/Mathematics/LinearAlgebra/1.GeometryOfLinEQ.md
+++ b/Mathematics/LinearAlgebra/1.GeometryOfLinEQ.md
@@ -154,7 +154,7 @@ If we have a hypothetical $9$-dimensional matrix $A$, denoting a system of linea
 
 Given that only a subset of $8$ column vectors are linearly independent, call this matrix $B$ of size $9, 8$, then an output $C$ would be within to $Col(B)$ within $\mathbb{R}^{9}$
 
-# 1.X of Introduction to Statistical Learning
+# 1.X of Introduction to  Linear Algebra
 
 
 The 4 fundamental subspaces within linear algebra are:
@@ -243,3 +243,55 @@ Ultimately, the subspace space that a vector exists within is determined by the 
 It isn't possible for a given sytstem of linear equatiosn to have more unknowns than equations. There must be a coefficient $n$ for each equation $n$, if each vector is linearly independent. Otherwise, if there are more unknowns than equations, then one of the vectors is linearly dependent on another.
 
 </details>
+
+### Definitions
+
+**ROW ECHELON FORM**
+
+For a matrix to be in Row Echelon Form:
+
+1. If a given row isn't all $0$s, then the first non-zero number must be a $1$
+2. All zero rows are at the bottom of the matrix
+3. In set of two successive rows that aren't of all zeros, the first non-zero number $1$ in the second row then occurs further right of the leading $1$ in the previous row.
+
+**REDUCED ROW ECHELON FORM**
+
+For a matrix to be in reduced echelon form, it must have the properties defined by the Row Echelon Form with the addition that any column which contains it's first non-zero number to be a leading $1$ has a a set of $0$s in it's other entries.
+
+If there is no space for a $0$ below the $1$ it is not in Row Echelon Form.
+
+$\begin{pmatrix}1 & 2 & 0 & 5 \\ 0 & 0 & 1 & 3 \\ 0 & 0 & 0 & 0 \end{pmatrix}$
+
+Any matrix in Reduced Row Echelon Form is in Row Echelon Form
+
+**RANK**
+
+The $Rank()$ is a matrix is the number of linearly independent rows or linearly independent columns it has.
+
+The row rank and the column rank of a matrix are always equal, and a $Rank()$ is never $0$ if it isn't a zero matrix.
+
+To find the $Rank()$ of a matrix, $A$, you can put it in Row Echelon Form through Gaussian Eliminationm, which tells us the number of linearly independent rows $A$ through it's number of non-zero rows it has.
+
+**Gaussian Elimination**
+
+Given a matrix $A$, of:
+
+$A = \begin{pmatrix} 2 & 1 & -1 \\ -3 & -1 & 2 \\ -2 & 1 & 2 \end{pmatrix}$
+
+Choose the leftmost column that doesn't consist of all $0$s.
+
+The topmost row must not have a $0$ as it's first entry. Swap any row to ensure this if needed.
+
+Then, multiply each element of the first row by a scalar defined by $\frac{1}{a}$, where $a$ is the first element in the first row.
+
+$\begin{pmatrix} 1 & \frac{1}{2} & -\frac{1}{2} \\ -3 & -1 & 2 \\ -2 & 1 & 2 \end{pmatrix}$
+
+Then, add suitable multiples of the first row to the rows below so that all entries below the leading $1$ become $0$.
+
+$\begin{pmatrix} 1 & \frac{1}{2} & -\frac{1}{2} \\ 0 & \frac{1}{2} & \frac{1}{2} \\ 0 & 2 & 1 \end{pmatrix}$
+
+This is repeated for the sub matrices of $A$, until $A$ is in row echelon form.
+
+$c\begin{bmatrix}1\\2\\3\end{bmatrix} + v\begin{bmatrix}-3\\1\\-2\end{bmatrix} = \begin{bmatrix}2 \\ 3 \\ -1 \end{bmatrix}$
+
+
