--- a/Mathematics/LinearAlgebra/1.GeometryOfLinEQ.md
+++ b/Mathematics/LinearAlgebra/1.GeometryOfLinEQ.md
@@ -264,6 +264,8 @@ $\begin{pmatrix}1 & 2 & 0 & 5 \\ 0 & 0 & 1 & 3 \\ 0 & 0 & 0 & 0 \end{pmatrix}$
 
 Any matrix in Reduced Row Echelon Form is in Row Echelon Form
 
+Through Reduced Row Echelon Form, we're able to find the basis vectors of the row space of a matrix.
+
 **RANK**
 
 The $Rank()$ is a matrix is the number of linearly independent rows or linearly independent columns it has.
